modules/msk/security-group.tf
resource "aws_security_group" "msk_sg" {
  name        = "your-security-group-name"
  description = "msk security group"
  vpc_id      = var.vpc_id

  ingress {
    from_port = 9096
    to_port   = 9096
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 2181
    to_port   = 2181
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 2182
    to_port   = 2182
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
